@@ -1,5 +1,10 @@
 2017-06-19  Andreas Skyman  <andreas.skyman@molflow.com>
 
+	* Mscripts_misc/sband_from_l1b.m: implemented thermal expansion of l0_LO
+	in addition to l0_SB
+
+2017-06-19  Andreas Skyman  <andreas.skyman@molflow.com>
+
 	* Mscripts_misc/: created directory (this name is probably temporary)
 	* Mscripts_misc/sband_from_l1b.m: added matlab function for calculating
 	sideband leakage for an L1b record, based on a model for the thermal
